--- a/src/components/driverProfileRegistration/DriverProfileAffiliateProgram.css
+++ b/src/components/driverProfileRegistration/DriverProfileAffiliateProgram.css
@@ -2,13 +2,14 @@
     border-radius: 5px;
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
     padding-bottom: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 80px;
 }
 
 .affiliateProgramBody h3 {
     font-size: 24px;
     font-weight: 400;
     color: #304269;
+    text-align: center;
     padding-bottom: 10px;
     padding-top: 50px;
 }
@@ -25,6 +26,7 @@
 }
 
 .affiliateProgramButton span {
+    text-align: center;
     border: 1px solid #f60;
     border-radius: 5px;
     padding: 10px;
@@ -124,9 +126,23 @@
 }
 
 .affiliateProgramTable {
-    margin: 0 auto;
-    font-size: 13px;
-    font-weight: 400;
+    font-size: 14px !important;
+    font-weight: 400 !important;
+    color: #304269 !important;
+}
+
+.affiliateProgramTableBody {
+    padding: 20px;
+}
+
+.affiliateProgramTable {
+    width: 1140px !important;
+}
+
+@media (max-width: 1140px) {
+    .affiliateProgramTableBody div :nth-child(2) {
+        overflow: initial !important;
+    }
 }
 
 @media (max-width: 768px) {}
