--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
@@ -138,7 +138,8 @@ div.tripSettingsContentAddCity p:hover {
     outline: none;
 }
 
-.tripSettingsContentDate {}
+
+/* .tripSettingsContentDate {} */
 
 
 /* Content End */
