--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -78,6 +78,7 @@
     width: 156px;
     height: 156px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 .basicInformationBodyTopImgHover:hover .basicInformationBodyTopImg {
