--- a/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
+++ b/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
@@ -116,6 +116,36 @@
     color: #666;
 }
 
+.refreshIndicatorModal {
+    position: fixed;
+    z-index: 999;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.5);
+    /* box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.refreshIndicatorModal :nth-child(1) {
+    box-shadow: none !important;
+    background: none !important;
+}
+
+.refreshIndicatorSuccess {
+    position: absolute;
+    z-index: 99;
+    width: 70px;
+    height: 70px;
+    background: url(./img/success.svg) no-repeat;
+    background-size: 70px 70px;
+    background-position: center center;
+}
+
 @media (max-width: 768px) {
     .basicInformationBodyBottom {
         box-shadow: none;
