--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -334,6 +334,63 @@
     height: 30px;
     background-size: contain!important;
     border-radius: 50%;
+    object-fit: cover;
+}
+
+.openMenu:hover .hederMenu {
+    height: 120px;
+}
+
+.openDropDownMenuBt {
+    cursor: pointer;
+    margin-left: 5px;
+    width: 14px;
+    height: 14px;
+    background: url(./pictures/down-arrowGray.svg) no-repeat;
+    background-size: 14px 14px;
+    background-position: center center;
+    object-fit: cover;
+}
+
+.hederMenu {
+    position: absolute;
+    overflow: hidden;
+    z-index: 9;
+    top: 35px;
+    right: 0;
+    width: 120px;
+    height: 0;
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    text-align: left;
+    border-radius: 5px;
+    transition: all 0.3s;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.hederMenu span {
+    width: 100%;
+    padding: 5px;
+    padding-left: 15px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #304269;
+    border-bottom: none;
+    transition: ease 0.3s;
+}
+
+.hederMenu span:nth-child(1) {
+    border-radius: 5px 5px 0 0;
+}
+
+.hederMenu span:nth-last-child(1) {
+    border-radius: 0 0 5px 5px;
+}
+
+.hederMenu span:hover {
+    background: rgba(204, 204, 204, 0.6);
 }
 
 
