--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -338,16 +338,16 @@
 }
 
 .openMenu:hover .hederMenu {
-    height: 120px;
+    height: 155px;
 }
 
 .openDropDownMenuBt {
     cursor: pointer;
-    margin-left: 5px;
+    margin-left: 10px;
     width: 14px;
     height: 14px;
-    background: url(./pictures/down-arrowGray.svg) no-repeat;
-    background-size: 14px 14px;
+    background: url(./pictures/moreWhite.svg) no-repeat;
+    background-size: 12px 12px;
     background-position: center center;
     object-fit: cover;
 }
@@ -358,13 +358,12 @@
     z-index: 9;
     top: 35px;
     right: 0;
-    width: 120px;
+    width: 200px;
     height: 0;
     display: flex;
     flex-direction: column;
     background: #fff;
     text-align: left;
-    border-radius: 5px;
     transition: all 0.3s;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
@@ -377,17 +376,18 @@
     font-size: 14px;
     line-height: 20px;
     color: #304269;
-    border-bottom: none;
+    border-bottom: 1px solid #eaeaea;
     transition: ease 0.3s;
 }
 
-.hederMenu span:nth-child(1) {
+
+/* .hederMenu span:nth-child(1) {
     border-radius: 5px 5px 0 0;
 }
 
 .hederMenu span:nth-last-child(1) {
     border-radius: 0 0 5px 5px;
-}
+} */
 
 .hederMenu span:hover {
     background: rgba(204, 204, 204, 0.6);
