--- a/src/components/driverProfileRegistration/DriverProfileHistory.css
+++ b/src/components/driverProfileRegistration/DriverProfileHistory.css
@@ -6,7 +6,7 @@
 }
 
 .driverProfileHistoryTop {
-    background: #ccc;
+    background: rgba(204, 204, 204, 0.6);
     width: 100%;
     height: 40px;
     border-radius: 5px 5px 0 0;
