--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -38,6 +38,7 @@ html {
     width: 40px;
     height: 40px;
     position: fixed;
+    z-index: 5;
     bottom: 53px;
     right: 2%;
     cursor: pointer;
