--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
@@ -354,7 +354,7 @@ span.newTourDatepickerSpan {
     text-indent: 20px;
     background: url(./img/calendarGray.svg)no-repeat;
     background-size: 14px 14px;
-    background-position: top 2px left 0;
+    background-position: top 2px left 10px;
 }
 
 span.newTourDatepickerSpan:hover {
