--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -332,7 +332,7 @@
 .avatar {
     width: 30px;
     height: 30px;
-    background-size: contain!important;
+    background-size: 30px 30px !important;
     border-radius: 50%;
     object-fit: cover;
 }
