--- a/src/components/home/HomeBody/RouteMenu.css
+++ b/src/components/home/HomeBody/RouteMenu.css
@@ -105,7 +105,7 @@
     -ms-flex-pack: start;
     justify-content: start;
     -ms-flex-line-pack: center;
-    align-content: center;
+    align-items: center;
     padding-left: 20px;
     background: none;
     text-align: center;
