--- a/src/components/home/HomeBody/Search.css
+++ b/src/components/home/HomeBody/Search.css
@@ -14,6 +14,14 @@
     color: black;
 }
 
+.searchDriverDropDown {
+    position: absolute;
+    z-index: 14;
+    top: 24px;
+    left: 10px;
+    color: black;
+}
+
 .searchInputDriverInformation {
     width: 100%;
 }
