--- a/src/components/drivers/DriversBody/DriversProperties/components/ValueMenu/Slider.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/ValueMenu/Slider.css
@@ -47,7 +47,7 @@
     cursor: -webkit-grab;
     cursor: grab;
     border-radius: 50%;
-    box-shadow: 0 0 10px 0px rgba(221, 221, 221, 1);
+    /* box-shadow: 0 0 10px 0px rgba(221, 221, 221, 1); */
     background-color: #f60;
     -ms-touch-action: pan-x;
     touch-action: pan-x;
