--- a/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
@@ -5,8 +5,8 @@
     height: 120px;
     width: 200px;
     background-color: #fff;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     border-radius: 5px;
-    box-shadow: 0 0 1px 1px rgb(236, 236, 236);
     z-index: 100;
 }
 
@@ -14,6 +14,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 5px;
+    background: rgba(48, 66, 105, 0.6);
     width: 100%;
     height: 100%;
 }
@@ -30,7 +32,7 @@
 .peopleMenu_element_part p {
     font-size: 10pt;
     line-height: 15px;
-    color: #3c4043;
+    color: #fff;
     margin: 0;
     padding: 0;
 }
@@ -83,12 +85,12 @@
 }
 
 .valueBlock_button:disabled {
-    color: #bdbdbd;
-    background: #f4f5f6;
+    color: #304269;
+    background: #e0e0e0;
 }
 
 .valueBlock_value_text {
-    color: #3c4043;
+    color: #fff;
     font-size: 10pt;
     margin: 0 5px;
 }
@@ -105,7 +107,7 @@
     border: none;
     text-decoration: none;
     cursor: pointer;
-    color: #3c4043;
+    color: #fff;
     font-size: 10pt;
     background: none;
 }
@@ -115,7 +117,7 @@
     border: none;
     text-decoration: none;
     cursor: pointer;
-    color: #304269;
+    color: #fff;
     font-size: 10pt;
     font-weight: bold;
     background: none;
