--- a/src/components/drivers/DriversBody/DriversProperties/components/ValueMenu/ValueMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/ValueMenu/ValueMenu.css
@@ -2,12 +2,16 @@
     position: absolute;
     top: 34px;
     right: 0px;
-    border-radius: 3px;
-    box-shadow: 0 0 1px 1px rgb(236, 236, 236);
+    border-radius: 5px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     width: 200px;
     height: 92px;
-    background-color: #ffffff;
+    background-color: #828ca5;
     z-index: 100;
+}
+
+.drivers_properties_valueMenu_BG {
+    background: rgba(48, 66, 105, 0.6);
 }
 
 .valueMenu_valueBlock {
@@ -28,7 +32,7 @@
     top: 15px;
     font-size: 10pt;
     font-weight: 400;
-    color: #304269;
+    color: #fff;
 }
 
 .valueMenu_borderElement p:nth-child(2) {
@@ -67,13 +71,13 @@
 .valueMenu_selectBlock_leftBall {
     left: 0px;
     background-color: #ffffff;
-    box-shadow: 0 0 1px 1px rgb(236, 236, 236);
+    /* box-shadow: 0 0 1px 1px rgb(236, 236, 236); */
 }
 
 .valueMenu_selectBlock_rightBall {
     right: 0px;
     background-color: #304269;
-    box-shadow: 0 0 1px 1px rgb(236, 236, 236);
+    /* box-shadow: 0 0 1px 1px rgb(236, 236, 236); */
 }
 
 .valueMenu_stateBlock {
@@ -89,7 +93,7 @@
     border: none;
     text-decoration: none;
     cursor: pointer;
-    color: #304269;
+    color: #fff;
     font-size: 10pt;
     font-weight: bold;
     background: none;
@@ -101,7 +105,7 @@
     border: none;
     text-decoration: none;
     cursor: pointer;
-    color: #3c4043;
+    color: #fff;
     font-size: 10pt;
     background: none;
 }
