--- a/src/components/drivers/DriversRoute/DriversRoute.css
+++ b/src/components/drivers/DriversRoute/DriversRoute.css
@@ -9,7 +9,7 @@
 }
 
 .route_date {
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     order: 0;
     width: 100%;
@@ -28,27 +28,18 @@
     padding: 10px;
 }
 
-.route_date_value {
-    display: flex;
-}
-
-.route_change_emblem {
-    display: flex;
-    width: 21px;
-    height: 21px;
-    background: url(pictures/drivers_edit_route.png) no-repeat;
-    background-size: 21px 21px;
-}
-
 .route_change_text {
-    display: flex;
-    height: 100%;
-    text-align: right;
+    cursor: pointer;
     text-decoration: underline;
+    padding-right: 25px;
+    height: 24px;
+    line-height: 34px;
     font-weight: 400;
     font-size: 12px;
     color: #ffffff;
-    margin: 3px;
+    background: url(pictures/editBlue.svg) no-repeat;
+    background-size: 21px 21px;
+    background-position: bottom right;
 }
 
 .route_show {
@@ -84,17 +75,6 @@
     font-size: 16px;
     color: #ffffff;
     white-space: pre-line;
-}
-
-.route_show_line {
-    position: absolute;
-    height: 15px;
-    bottom: 0;
-    right: 0;
-    width: 250px;
-    color: #ffffff;
-    border-top: 1px solid;
-    z-index: 4;
 }
 
 .route_bottomBlock {
