add button up&&filter

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -141,5 +141,45 @@ html {
     color: #f60;
 }
 
+.footerMobileButtonUp {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 35px;
+    height: 80px;
+    position: fixed;
+    z-index: 5;
+    bottom: 100px;
+    right: 2%;
+    cursor: pointer;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.4);
+}
+
+.footerMobileButtonUp:hover {
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.4);
+}
+
+.footerMobileIconUp {
+    cursor: pointer;
+    width: 100%;
+    height: 50%;
+    background: url(./pictures/up-arrow.svg) no-repeat;
+    background-size: 20px 30px;
+    background-position: center center;
+    border-bottom: 1px solid #ccc;
+}
+
+.footerMobileIconFilter {
+    cursor: pointer;
+    width: 100%;
+    height: 50%;
+    background: url(./pictures/settings.svg) no-repeat;
+    background-size: 25px 25px;
+    background-position: center center;
+}
+
 
 /* Footer Mobaile End */
