--- a/src/components/home/HomeBody/HomeBody.css
+++ b/src/components/home/HomeBody/HomeBody.css
@@ -16,7 +16,7 @@
 .mobailRoutMenu {
     background: #304269;
     padding-bottom: 120px;
-    height: 100vh;
+    height: 100%;
 }
 
 .mobailRoutMenuTitle {
