--- a/src/components/drivers/DriversBody/DriversProperties/components/SortMenu/SortMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/SortMenu/SortMenu.css
@@ -1,4 +1,5 @@
 .drivers_properties_sortMenu {
+    position: relative;
     display: flex;
     flex-direction: row;
 }
@@ -6,6 +7,7 @@
 .sortMenu_element {
     cursor: pointer;
     margin: 0 15px;
+    display: flex;
 }
 
 .sortMenu_element span {
@@ -18,9 +20,20 @@
 }
 
 .sortMenu_element_active {
+    display: flex !important;
     border-bottom: 2px solid #f60;
 }
 
 .sortMenu_element_active span {
     color: #f60;
+}
+
+.sortMenu_element_icon {
+    display: none;
+    width: 15px;
+    height: 40px;
+    margin-left: 2px;
+    background-size: contain !important;
+    background-position: center center !important;
+    border-bottom: none !important;
 }
