--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -71,24 +71,19 @@
 }
 
 .driversBlock_driverCard {
-    width: 280px;
-    margin: 0 auto 20px auto;
-    box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
+    transition: all 0.3s;
 }
 
 .driversBlock_driverCard:hover {
-    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .driversBlock_carImage {
     position: relative;
-    width: 280px;
     height: 210px;
-    background-color: red;
     border-radius: 5px 5px 0 0;
-    -o-object-fit: cover;
-    object-fit: cover;
 }
 
 .driversBlock_carImage:hover .driversBlock_carBlackout {
@@ -108,6 +103,7 @@
     height: 100%;
     /*color: transparent;*/
     background-color: rgba(0, 0, 0, 0);
+    border-radius: 5px 5px 0 0;
     z-index: 20;
     transition: 0.3s all;
 }
@@ -149,6 +145,7 @@
     width: 100%;
     font-size: 12px;
     color: #304269;
+    transition: all 0.3s;
 }
 
 .driversBlock_carName {
