--- a/src/components/drivers/DriversBody/DriversProperties/components/SortMenu/SortMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/SortMenu/SortMenu.css
@@ -6,13 +6,15 @@
 
 .sortMenu_element {
     cursor: pointer;
-    margin: 0 15px;
+    margin: 0 10px;
+    padding: 0 2px;
     display: flex;
+    transition: all 0.3s;
 }
 
 .sortMenu_element span {
     color: #304269;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 400;
     line-height: 41px;
     transition: all 0.3s;
@@ -20,7 +22,7 @@
 }
 
 .sortMenu_element_active {
-    display: flex !important;
+    visibility: visible !important;
     border-bottom: 2px solid #f60;
 }
 
@@ -29,7 +31,7 @@
 }
 
 .sortMenu_element_icon {
-    display: none;
+    visibility: hidden;
     width: 15px;
     height: 40px;
     margin-left: 2px;
