--- a/src/components/home/HomeBody/RouteMenu.css
+++ b/src/components/home/HomeBody/RouteMenu.css
@@ -4,7 +4,13 @@
 
 .routemenu_addCity {
     cursor: pointer;
-    margin-top: 20px;
+    min-height: 41px;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
+    margin: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .routemenu_addCity img {
@@ -34,28 +40,35 @@
 
 .routemenu_date {
     cursor: pointer;
-    border-color: white;
-    margin-bottom: 40px;
-    color: #fff;
-    font-weight: 400;
-    font-size: 9pt;
     width: 100%;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
+    margin: 2px;
+    max-height: 41px;
 }
 
 .routemenu_date div {
+    cursor: pointer !important;
     width: 100% !important;
-}
-
-.routemenu_date label {
     color: #fff !important;
     font-weight: 400 !important;
-    font-size: 9pt;
+    font-size: 14px !important;
+    max-height: 41px;
 }
 
 .routemenu_date input {
+    cursor: pointer !important;
     color: #fff !important;
     font-weight: 400 !important;
-    font-size: 9pt !important;
+    font-size: 14px !important;
+    background: url(./pictures/calendar.svg) no-repeat;
+    background-size: 20px 20px;
+    background-position: top 10px right 5px;
+    max-height: 41px;
+}
+
+.routemenu_date hr {
+    display: none;
 }
 
 
@@ -72,37 +85,26 @@
 }
 
 .routemenu_parameters {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -ms-flex-line-pack: center;
     align-content: center;
     text-align: center;
-    background-color: rgba(196, 205, 224, 0.11);
+    background: rgba(255, 255, 255, 0.3);
     border: none;
     -webkit-box-shadow: none;
     box-shadow: none;
     border-radius: none !important;
+    margin: 2px;
+    border-radius: 5px;
     margin-bottom: 19px;
+    cursor: pointer;
 }
 
 .routemenu_parametersAdd {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
     flex-direction: row;
     justify-content: center;
-    -ms-flex-line-pack: center;
     align-items: center;
     background: none;
     text-align: center;
@@ -112,7 +114,7 @@
     border: none !important;
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
-    height: 43px;
+    height: 41px;
 }
 
 .routemenu_parametersAdd:hover {
@@ -133,16 +135,10 @@
     margin: auto 10px;
 }
 
-.menuHome {
-    min-height: 180px;
-    padding-left: 30px !important;
-}
-
 .peopleMenuHome {
+    position: relative;
     border: 1px solid #fff;
     border-radius: 5px;
-    width: 270px;
-    height: 48px;
     text-align: start;
     line-height: 48px;
     color: #fff;
@@ -155,73 +151,43 @@
     margin-right: 10px;
 }
 
+.menuHome {
+    display: flex;
+    justify-content: space-between;
+}
+
 .menuHome .drivers_properties_peopleMenu {
-    top: 48px;
-    left: 38px;
+    top: 50px;
+    right: -30px;
 }
 
 .menuHome .drivers_properties_autoMenu {
-    top: 105px;
-    left: 125px;
+    top: 50px;
+    left: 40%;
 }
 
 .menuHome .drivers_properties_languageMenu {
-    top: 164px;
-    right: 40px;
+    top: 50px;
+    right: 30px;
 }
 
 .routemenu_search {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -ms-flex-line-pack: center;
-    align-content: center;
-    width: 100%;
-}
-
-.routemenu_search_button {
-    cursor: pointer;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    max-height: 42px;
-    margin-bottom: 1%;
+    margin: 2px;
     background-color: #f60;
-    width: 80%;
-    max-width: 260px;
-    border: none;
     border-radius: 5px;
+    max-height: 41px;
+    min-height: 41px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.routemenu_search_button img {
-    margin: auto 0;
-}
+.routemenu_search_button {}
 
 
 /* .addCities {
    
 } */
-
-.startCity,
-.endCity,
-.newCity {}
 
 .iconMass {
     display: -webkit-box;
@@ -254,7 +220,12 @@
 
 .crossToolTip {
     position: relative;
-    display: inline-block;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
+    margin: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .crossToolTipText {
@@ -268,8 +239,8 @@
     /* Position the tooltip text */
     position: absolute;
     z-index: 10;
-    top: 0px;
-    left: 95px;
+    top: 8px;
+    left: 125px;
     margin-left: -60px;
     /* Fade in tooltip */
     opacity: 9;
@@ -287,11 +258,11 @@
 
 .crossIcon {
     cursor: pointer;
-    visibility: hidden !important;
-}
-
-.startCity:hover .crossIcon {
-    visibility: visible !important;
+    display: block;
+    margin: 0;
+    width: 15px;
+    height: 15px;
+    background-size: 15px 15px !important;
 }
 
 .startCity:first-child:hover .crossIcon {
@@ -304,7 +275,7 @@
 }
 
 p.routemenu_search_text {
-    margin: 16px 0;
+    margin: 0;
 }
 
 .routemenu_comment {
@@ -323,14 +294,15 @@ p.routemenu_search_text {
 .city_input {
     position: relative;
     z-index: 3;
-    outline: 0;
-    border-width: 0 0 1px;
-    border-color: white;
-    background-color: transparent;
-    color: white;
-    font-size: 15px;
-    height: 50%;
+    border-radius: 5px;
+    border: none;
+    background: rgba(255, 255, 255, 0.3);
+    color: #fff;
+    font-size: 14px;
+    min-height: 38px;
     width: 100%;
+    padding: 10px;
+    margin: 2px;
 }
 
 .autocomplete-dropdown-container span {
