--- a/src/components/home/HomeBody/RouteMenu.css
+++ b/src/components/home/HomeBody/RouteMenu.css
@@ -95,10 +95,9 @@
     -webkit-box-shadow: none;
     box-shadow: none;
     border-radius: none !important;
-    margin: 2px;
     border-radius: 5px;
-    margin-bottom: 19px;
     cursor: pointer;
+    margin: 2px;
 }
 
 .routemenu_parametersAdd {
@@ -106,29 +105,20 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background: none;
-    text-align: center;
-    background-color: none;
-    border: none;
-    border-radius: none !important;
-    border: none !important;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
+    background: rgba(255, 255, 255, 0.3);
     height: 41px;
-}
-
-.routemenu_parametersAdd:hover {
-    background-color: none;
-    background: none;
+    width: 100%;
+    border-radius: 5px;
+    margin: 2px;
 }
 
 .routemenu_parametersAdd p {
     margin: 0;
-    padding-left: 15px;
-    padding-right: 38px;
     font-size: 15px;
     color: #fff;
     font-weight: 400;
+    padding-right: 25px;
+    background-position: center right !important;
 }
 
 .routemenu_parametersAdd img {
@@ -152,8 +142,10 @@
 }
 
 .menuHome {
+    padding-top: 10px !important;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .menuHome .drivers_properties_peopleMenu {
@@ -172,6 +164,7 @@
 }
 
 .routemenu_search {
+    cursor: pointer;
     margin: 2px;
     background-color: #f60;
     border-radius: 5px;
@@ -219,6 +212,7 @@
 }
 
 .crossToolTip {
+    cursor: pointer;
     position: relative;
     background: rgba(255, 255, 255, 0.3);
     border-radius: 5px;
@@ -267,6 +261,10 @@
 
 .startCity:first-child:hover .crossIcon {
     visibility: hidden !important;
+}
+
+.startCity-CheckInput input:last-child {
+    border: 1px solid green;
 }
 
 .routemenu_search_text {
