--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -396,6 +396,9 @@
 .hederMenu span:hover {
     background: rgba(204, 204, 204, 0.6);
 }
-
-
+.preloadHiddenBlock{
+    visibility: hidden;
+}
+.headerUserTypeModal{
+}
 /* Header End */
