--- a/src/components/drivers/DriversRoute/DriversChangeRoute.css
+++ b/src/components/drivers/DriversRoute/DriversChangeRoute.css
@@ -45,13 +45,17 @@
 
 span.route_add_city {
     cursor: pointer;
+    text-align: center;
     color: #ffffff;
     font-weight: 400;
+    min-height: 41px;
+    line-height: 41px;
+    margin: 2px;
     font-size: 12px;
-    margin-left: 20px;
     padding-left: 20px;
     background: url(pictures/addWhite.svg) no-repeat;
     background-size: 17px 17px;
+    background-position: center left;
 }
 
 .route_secondBottomBlock {
@@ -121,7 +125,8 @@ span.route_add_city {
 
 /* CalendarModal Bigin */
 
-.calendarModalSearch div {
+
+/* .calendarModalSearch div {
     width: 100% !important;
     max-height: 50px !important;
     cursor: pointer !important;
@@ -133,14 +138,15 @@ span.route_add_city {
     border-radius: 5px !important;
 }
 
-.calendarModalSearch hr {
-    display: none;
-}
-
-.calendarModalSearch label {
-    display: none;
+.calendarModalSearch div {
+    color: #fff !important;
     font-weight: 400 !important;
     font-size: 14px !important;
+    padding-left: 25px;
+}
+
+.calendarModalSearch hr {
+    display: none;
 }
 
 .calendarModalSearch input {
@@ -158,7 +164,7 @@ span.route_add_city {
 
 .calendarModalSearch input ::placeholder {
     color: #fff !important;
-}
+} */
 
 
 /* CalendarModal end */
