--- a/src/components/drivers/DriversRoute/DriversRoute.css
+++ b/src/components/drivers/DriversRoute/DriversRoute.css
@@ -45,8 +45,6 @@
 
 .route_show {
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
     padding-bottom: 25px;
     width: 100%;
     height: 100%;
@@ -94,4 +92,14 @@
 
 .route_comment span {
     font-weight: 500;
+}
+
+@media (max-width: 1140px) {}
+
+@media (max-width: 768px) {}
+
+@media (max-width: 576px) {
+    .route_show_Line {
+        width: 80%;
+    }
 }
