--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -1,6 +1,6 @@
 .homeHeader {
     width: 100%;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(48, 66, 105, 0.8);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -23,6 +23,7 @@
     min-height: 60px;
     padding-left: 10px;
     background: #304269;
+    width: 100%;
 }
 
 .headerMobail h3 {
@@ -396,9 +397,12 @@
 .hederMenu span:hover {
     background: rgba(204, 204, 204, 0.6);
 }
-.preloadHiddenBlock{
+
+.preloadHiddenBlock {
     visibility: hidden;
 }
-.headerUserTypeModal{
-}
+
+.headerUserTypeModal {}
+
+
 /* Header End */
