--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,6 +1,7 @@
 .home_window {
-    background: url(bg.jpg) 100% 100% no-repeat;
+    background: url(bg.jpg) no-repeat;
     background-size: cover;
+    background-position: center center;
 }
 
 .home_block {
