--- a/src/components/registration/ForgotPassword.css
+++ b/src/components/registration/ForgotPassword.css
@@ -1,7 +1,7 @@
 .forgotPasswordBody {
     min-height: 94.4vh;
     width: 100%;
-    background: url(./img/bg.jpg) no-repeat;
+    background: url(./img/tbs_4.jpg) no-repeat;
     background-size: cover;
     background-position: center center;
     /* align-items: center; */
@@ -9,14 +9,14 @@
 
 .forgotPasswordContent {
     border-radius: 5px;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(48, 66, 105, 0.8);
     height: 30%;
     margin-top: 10%;
 }
 
 .forgotPasswordContent span {
-    font-size: 16px;
-    font-weight: 400;
+    font-size: 22px;
+    font-weight: 500;
     color: #fff;
     padding: 20px 0 20px 0;
 }
@@ -58,12 +58,49 @@
 }
 
 .forgotPasswordContent .forgotPasswordContent-error {
-    color: #fff !important;
-    background: #a5252580;
-    padding: 10px;
-    border-radius: 5px;
+    color: #e81123 !important;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 400;
+    width: 80%;
+    padding-top: 5px;
+    text-align: end;
 }
 
-.forgotPasswordSuccess {}
+.forgotPasswordContent .forgotPasswordInput-error {
+    background: #a5252580;
+}
+
+.resetPasswordInput {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 5px;
+}
+
+.resetPasswordInput i {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 12%;
+    width: 20px;
+    height: 20px;
+    background: url(./img/eyeBlue.svg) no-repeat;
+    background-size: 100% 100%;
+    transition: all 0.3s;
+}
+
+.resetPasswordInput i:hover {
+    background: url(./img/eyeOrange.svg) no-repeat;
+    background-size: 100% 100%;
+}
+
+.resetPasswordInput-active i {
+    background: url(./img/eyeOrange.svg) no-repeat;
+    background-size: 100% 100%;
+}
+
+.resetPasswordInput-active i:hover {
+    background: url(./img/eyeBlue.svg) no-repeat;
+    background-size: 100% 100%;
+}
