fix css Home page

--- a/src/components/home/HomeBody/HomeBody.css
+++ b/src/components/home/HomeBody/HomeBody.css
@@ -97,10 +97,9 @@
 .routContent {
     margin-bottom: 100px;
     background: rgba(48, 66, 105, 0.8);
-    border-radius: 5px;
+    border-radius: 0 0 5px 5px;
     padding: 20px !important;
     height: 100%;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .sizeMap {
