--- a/src/components/home/text.css
+++ b/src/components/home/text.css
@@ -6,7 +6,9 @@
     text-transform: uppercase;
     min-height: 40px;
     margin-top: 81px;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
+    background: rgba(48, 66, 105, 0.8);
+    border-radius: 5px 5px 0 0;
 }
 
 .text_secondLine {
@@ -14,7 +16,8 @@
     text-align: center;
     font-weight: 400;
     color: #fff;
-    margin-bottom: 46px;
+    padding-bottom: 46px;
+    background: rgba(48, 66, 105, 0.8);
 }
 
 
